Changed from grizzly to jetty for data server. Couldn't get ETag to work with grizzly. * Simple ETag support based on File#lastModified()

--- a/com.dynamo.cr.server/build.properties
+++ b/com.dynamo.cr.server/build.properties
@@ -3,7 +3,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                ext/asm-3.1.jar,\
-               ext/grizzly-servlet-webserver-1.9.18-k.jar,\
                ext/jersey-client-1.3-sources.jar,\
                ext/jersey-client-1.3.jar,\
                ext/jersey-core-1.3.jar,\
@@ -14,4 +13,6 @@ bin.includes = META-INF/,\
                test_data/,\
                scripts/,\
                ext/derby.jar,\
-               ext/postgresql-9.0-801.jdbc4.jar
+               ext/postgresql-9.0-801.jdbc4.jar,\
+               ext/jetty-all-7.0.2.v20100331.jar,\
+               ext/grizzly-servlet-webserver-1.9.18-k.jar
