--- a/com.dynamo.cr.server/.classpath
+++ b/com.dynamo.cr.server/.classpath
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="ext/grizzly-servlet-webserver-1.9.18-k.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/jetty-all-7.0.2.v20100331.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/postgresql-9.0-801.jdbc4.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/derby.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/asm-3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="ext/grizzly-servlet-webserver-1.9.18-k.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-client-1.3-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-client-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-core-1.3.jar"/>
