Move client-related code from .common to new plug-in .client. ref #412

--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -94,6 +94,7 @@
         <module>../com.dynamo.cr.integrationtest</module>
         <module>../com.dynamo.cr.server</module>
         <module>../com.dynamo.cr.server.test</module>
+        <module>../com.dynamo.cr.client</module>
     </modules>
 
 </project>
