Create com.dynamo.cr.editor.fs plugin ref #439

--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -82,6 +82,7 @@
         <module>../com.dynamo.cr.common.test</module>
         <module>../com.dynamo.cr.editor</module>
         <module>../com.dynamo.cr.editor.core</module>
+        <module>../com.dynamo.cr.editor.fs</module>
         <module>../com.dynamo.cr.scene</module>
         <module>../com.dynamo.cr.scene.test</module>
         <module>../com.dynamo.cr.contenteditor</module>
