Type fix. hamcrest to mockito

--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -78,7 +78,7 @@
     </build>
 
     <modules>
-        <module>../org.hamcrest</module>
+        <module>../org.mockito</module>
         <module>../com.dynamo.cr.common</module>
         <module>../com.dynamo.cr.common.test</module>
         <module>../com.dynamo.cr.editor</module>
