--- a/org.mockito/pom.xml
+++ b/org.mockito/pom.xml
@@ -12,7 +12,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dynamo.cr</groupId>
-    <artifactId>org.hamcrest</artifactId>
+    <artifactId>org.mockito</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>eclipse-plugin</packaging>
 </project>
