Added com.dynamo.cr.client.test and initial DelegatingClientFactory

--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -98,6 +98,7 @@
         <module>../com.dynamo.cr.server</module>
         <module>../com.dynamo.cr.server.test</module>
         <module>../com.dynamo.cr.client</module>
+        <module>../com.dynamo.cr.client.test</module>
     </modules>
 
 </project>
