--- a/com.dynamo.cr.scene.test/pom.xml
+++ b/com.dynamo.cr.scene.test/pom.xml
@@ -16,4 +16,17 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>eclipse-plugin</packaging>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.sonatype.tycho</groupId>
+                <artifactId>maven-osgi-test-plugin</artifactId>
+                <version>${tycho-version}</version>
+                <configuration>
+                    <useUIHarness>false</useUIHarness>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
