Decorators for git status. ref #411

--- a/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr.editor/plugin.xml
@@ -347,5 +347,138 @@
             pattern="org\.eclipse\.ui\.editors/org\.eclipse\.ui\.editors\.wizards\.UntitledTextFileWizard">
       </activityPatternBinding>
    </extension>
+   <extension
+         point="org.eclipse.ui.decorators">
+      <decorator
+            adaptable="true"
+            icon="icons/overlay_error.png"
+            id="com.dynamo.cr.editor.decorators.unmergedStatus"
+            label="Unmerged status"
+            lightweight="false"
+            location="BOTTOM_RIGHT"
+            state="true">
+         <enablement>
+            <and>
+               <objectClass
+                     name="org.eclipse.core.resources.IResource">
+               </objectClass>
+               <objectState
+                     name="sessionProperty"
+                     value="com.dynamo.cr.editor.gitIndexStatus=U">
+               </objectState>
+            </and>
+         </enablement>
+      </decorator>
+      <decorator
+            adaptable="true"
+            icon="icons/overlay_edit.png"
+            id="com.dynamo.cr.editor.decorators.modifiedStatus"
+            label="Modified status"
+            lightweight="false"
+            location="BOTTOM_RIGHT"
+            state="true">
+         <enablement>
+            <and>
+               <objectClass
+                     name="org.eclipse.core.resources.IResource">
+               </objectClass>
+               <objectState
+                     name="sessionProperty"
+                     value="com.dynamo.cr.editor.gitIndexStatus=M">
+               </objectState>
+            </and>
+         </enablement>
+      </decorator>
+      <decorator
+            adaptable="true"
+            icon="icons/overlay_add.png"
+            id="com.dynamo.cr.editor.decorators.addedStatus"
+            label="Added status"
+            lightweight="false"
+            location="BOTTOM_RIGHT"
+            state="true">
+         <enablement>
+            <and>
+               <objectClass
+                     name="org.eclipse.core.resources.IResource">
+               </objectClass>
+               <objectState
+                     name="sessionProperty"
+                     value="com.dynamo.cr.editor.gitIndexStatus=A">
+               </objectState>
+            </and>
+         </enablement>
+      </decorator>
+      <decorator
+            adaptable="true"
+            icon="icons/overlay_delete.png"
+            id="com.dynamo.cr.editor.decorators.deletedStatus"
+            label="Deleted status"
+            lightweight="false"
+            location="BOTTOM_RIGHT"
+            state="true">
+         <enablement>
+            <and>
+               <objectClass
+                     name="org.eclipse.core.resources.IResource">
+               </objectClass>
+               <objectState
+                     name="sessionProperty"
+                     value="com.dynamo.cr.editor.gitIndexStatus=D">
+               </objectState>
+            </and>
+         </enablement>
+      </decorator>
+      <decorator
+            adaptable="true"
+            icon="icons/overlay_edit.png"
+            id="com.dynamo.cr.editor.decorators.renamedStatus"
+            label="Renamed status"
+            lightweight="false"
+            location="BOTTOM_RIGHT"
+            state="true">
+         <enablement>
+            <and>
+               <objectClass
+                     name="org.eclipse.core.resources.IResource">
+               </objectClass>
+               <objectState
+                     name="sessionProperty"
+                     value="com.dynamo.cr.editor.gitIndexStatus=R">
+               </objectState>
+            </and>
+         </enablement>
+      </decorator>
+      <decorator
+            adaptable="true"
+            icon="icons/overlay_add.png"
+            id="com.dynamo.cr.editor.decorators.copiedStatus"
+            label="Copied status"
+            lightweight="false"
+            location="BOTTOM_RIGHT"
+            state="true">
+         <enablement>
+            <and>
+               <objectClass
+                     name="org.eclipse.core.resources.IResource">
+               </objectClass>
+               <objectState
+                     name="sessionProperty"
+                     value="com.dynamo.cr.editor.gitIndexStatus=C">
+               </objectState>
+            </and>
+         </enablement>
+      </decorator>
+   </extension>
+   <extension
+         point="org.eclipse.core.runtime.adapters">
+      <factory
+            adaptableType="com.dynamo.cr.editor.compare.ChangedFilesView$ResourceStatus"
+            class="com.dynamo.cr.editor.compare.ResourceStatusAdapterFactory">
+         <adapter
+               type="org.eclipse.core.resources.IResource">
+         </adapter>
+      </factory>
+   </extension>
 
 </plugin>
