Lua script content assistant support using sdoc files ref #408

--- a/com.dynamo.cr.luaeditor/build.properties
+++ b/com.dynamo.cr.luaeditor/build.properties
@@ -3,4 +3,9 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/
+               icons/,\
+               DYNAMO_HOME/share/java/script_doc.jar,\
+               DYNAMO_HOME/share/doc/script_doc.sdoc,\
+               DYNAMO_HOME/share/doc/render_doc.sdoc,\
+               DYNAMO_HOME/share/doc/gui_doc.sdoc,\
+               DYNAMO_HOME/share/doc/go_doc.sdoc
