Moved jogl (opengl) from scene to a new plugin (javax.media.opengl) ref #110

--- a/com.dynamo.cr.scene/build.properties
+++ b/com.dynamo.cr.scene/build.properties
@@ -5,7 +5,4 @@ bin.includes = META-INF/,\
                lib/osx/,\
                lib/win32/,\
                lib/linux/,\
-               lib/vecmath.jar,\
-               lib/openmali.jar,\
-               lib/jogl.jar,\
-               lib/gluegen-rt.jar
+               lib/openmali.jar
