Removed src directory and added lib/* to binary build

--- a/javax.media.opengl/build.properties
+++ b/javax.media.opengl/build.properties
@@ -1,6 +1,8 @@
-source.. = src/
-output.. = bin/
 bin.includes = META-INF/,\
                .,\
                lib/jogl.jar,\
-               lib/vecmath.jar
+               lib/vecmath.jar,\
+               lib/gluegen-rt.jar,\
+               lib/linux/,\
+               lib/osx/,\
+               lib/win32/
